--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Greenfield</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIMr5fl9zH62-KcEwgyB-GKggmEkdR188"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?"></script>
     <script src="https://api.eventful.com/js/api"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/style.css" />
